# cel-demo

./: .gitignore  README.md  basic-curl.sh  cel  database.py  helpers.py  local_db  model.py  pyproject.toml  settings.yml
cel_services/: __main__.py  helpers.py  scheduler.py  server.py
